--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
 
 
 <iframe src="https://scratch.mit.edu/projects/1192245027/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+
+<p class="codepen" data-height="300" data-default-tab="result" data-slug-hash="yyJYgzm" data-pen-title="hang man" data-user="tuckercwc" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+      <span>See the Pen <a href="https://codepen.io/tuckercwc/pen/yyJYgzm">
+  hang man</a> by Tucker (<a href="https://codepen.io/tuckercwc">@tuckercwc</a>)
+  on <a href="https://codepen.io">CodePen</a>.</span>
+      </p>
+      <script async src="https://public.codepenassets.com/embed/index.js"></script>
+  
   <div id="app">
     <!-- student project HTML goes here -->
   </div>
@@ -27,4 +35,5 @@
   <!-- JavaScript -->
   <script src="script.js"></script>
 </body>
+
 </html>
